samples/_failures_safe/1761280817_a9ac4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d413ae2.c: In function ‘main’:
./samples/SAFE/__tmp_6d413ae2.c:136:15: error: expected ‘;’ at end of input
  136 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_6d413ae2.c:136:9: error: expected declaration or statement at end of input
  136 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_6d413ae2.c:136:9: error: expected declaration or statement at end of input
